[package]
name = "RustGatewayProxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.23"
serde_json = "1.0.108"
roxmltree = "0.19.0"
tokio = { version = "1", features = ["full"] }
iced = "0.3"